--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: elixir
-elixir: 1.3.2
-otp_release:
-  - 19.0
+matrix:
+  include:
+    - otp_release: 19.2
+      elixir: 1.4.1
+    - otp_release: 19.2
+      elixir: 1.3.4
+    - otp_release: 19.0
+      elixir: 1.4.1
+    - otp_release: 19.0
+      elixir: 1.3.4
